fixed alignment of boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,10 +84,13 @@ nav {
 	 color: grey;
 	 width: 650px;
 	 max-width: 66%;
-	 overflow: hidden;
 	 float: left;
-	 margin: 32px;
+	 margin: 34px;
 	 font-family: 'Arial', 'Helvetica-Neue', sans-serif;
+	 vertical-align:top;
+
+
+
 }
 
 .contact {
@@ -104,8 +107,9 @@ nav {
 	background-color: white;
 	color: #4aaaa5;
 	text-align: center;
-	margin-top: 40px;
+	margin-top: 35px;
 	vertical-align: top;
+
 }
 
 .footer {
